#15,99 + updated design for new home detail page

--- a/components/popups/valuation.twig
+++ b/components/popups/valuation.twig
@@ -1,6 +1,6 @@
 <div id="valuation-form-popup" class="valuation-popup" style="display:none; max-width:600px">
     <h3 class="mb-3">Valuation Enquiry</h3>
     <div class="valuation-popup--form-wrap">
-        {{ '[contact-form-7 id="7838" title="Valuation"]' | shortcodes }}
+        {{ options.shortcode.valuation_popup | shortcodes }}
     </div>
 </div>
