--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -103,6 +103,7 @@
 @import "sections/block-links";
 @import "sections/new-home-details";
 @import "sections/gallery-images";
+@import "sections/section-features-image";
 
 
 /*
