--- a/templates/base.twig
+++ b/templates/base.twig
@@ -67,5 +67,6 @@
 		</script>
 
         {% include "components/popups/valuation.twig" %}
+        {% include "components/popups/new-home-contact.twig" %}
 	</body>
 </html>
