hide shortcode school tab

--- a/templates/propertyhive/property-detail/tabs-content.twig
+++ b/templates/propertyhive/property-detail/tabs-content.twig
@@ -99,7 +99,7 @@
             {% endif %}
 
             <div id="property-info-schools" class="tab-pane fade">
-                {{ fn('do_shortcode','[locrating_all_in_one_map]') }}
+                {#{{ fn('do_shortcode','[locrating_all_in_one_map]') }}#}
                 {{ fn('do_shortcode','[locrating_schools_map]') }}
             </div>
         </div>
