shortcode school iframe wifth 100%

--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -338,6 +338,12 @@
             padding: 40px;
             text-align: center;
         }
+
+        .locrating-schools-shortcode{
+            iframe{
+                width: 100%;
+            }
+        }
     }
 
     #content + .page-separator{
