--- a/components/global/branch.twig
+++ b/components/global/branch.twig
@@ -16,7 +16,8 @@
             {% if post.branch_let_phone %}
                 <li><a href="#"><i class="fa-light fa-phone"></i> Lettings {{ post.branch_let_phone }}</a></li>
             {% endif %}
-            <li><a href="#"><i class="fa-light fa-envelope"></i> Email the local team</a></li>
+            <li><a href="#"><i class="fa-light fa-envelope"></i> Email the sales local team</a></li>
+            <li><a href="#"><i class="fa-light fa-envelope"></i> Email the lettings local team</a></li>
         </ul>
         <a class="view-branch-link" href="{{ post.link }}">View Branch Page <i class="fa-regular fa-chevron-right"></i></a>
     </div>
