--- a/templates/propertyhive/parts/residential-details.twig
+++ b/templates/propertyhive/parts/residential-details.twig
@@ -1,5 +1,5 @@
 <ul class="property-residential-details">
-    <li><i class="fa-light fa-bed-front"></i> {{ bedrooms }}</li>
+    <li><i class="fa-light fa-bed-front"></i> {{ bedrooms ? bedrooms : 'Studio' }}</li>
     <li><i class="fa-light fa-bath"></i> {{ bathrooms }}</li>
     <li><i class="fa-light fa-couch"></i> {{ reception_rooms }}</li>
 </ul>
