new homes grid item gap

--- a/src/sass/essential/shortcode/_new-homes-list.scss
+++ b/src/sass/essential/shortcode/_new-homes-list.scss
@@ -1,5 +1,7 @@
 .new-homes-list-shortcode{
     .new-homes-list-grid{
+        overflow: hidden;
+
         .new-home-promo-box,
         .promo-column{
             min-height: 100%;
@@ -30,6 +32,11 @@
                     color: $brand-main-red;
                 }
             }
+        }
+
+        .new-home-promo-box,
+        .new-home-post-item{
+            margin-bottom: 40px;
         }
     }
 }
