--- a/components/sections/cta_text.twig
+++ b/components/sections/cta_text.twig
@@ -1,5 +1,5 @@
 <section class="page-section page-section--padding50 section-cta-text text-center">
-    <div class="container">
+    <div class="container" data-aos="fade-up">
         <div class="section-cta-text--style style-{{ section.ctat_style }}">
             {% if section.ctat_title %}
                 <h3 class="text-uppercase">{{ section.ctat_title }}</h3>
