--- a/components/static-sections/properties.twig
+++ b/components/static-sections/properties.twig
@@ -1,5 +1,5 @@
 <section class="page-section page-section--padding50 section-shortcode-properties {{ css_class }}">
-    <div class="container">
+    <div class="container" data-aos="fade-left">
         {% if title %}
             <div class="page-section--heading">
                 <h3>{{ title }}</h3>
