--- a/components/static-sections/book-valuation.twig
+++ b/components/static-sections/book-valuation.twig
@@ -3,7 +3,7 @@
     <section class="page-section page-section--padding50 section-content-image section-valuation has-logo-watermark {{ short ? 'section-valuation--short' : '' }}">
         <div class="container">
             <div class="row no-gutters">
-                <div class="{{ short ? 'col-xl-10' : 'col-xl-9' }}">
+                <div data-aos="fade-down" class="{{ short ? 'col-xl-10' : 'col-xl-9' }}">
                     <div class="bg-primary section-content-image--content">
                         {% if options.section_valuation.title %}
                             <h2 class="{{ not short ? 'h1' : '' }}">{{ options.section_valuation.title }}</h2>
@@ -17,7 +17,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="{{ short ? 'col-xl-2' : 'col-xl-3' }}">
+                <div data-aos="fade-up" class="{{ short ? 'col-xl-2' : 'col-xl-3' }}">
                     <div class="section-content-image--image-wrap">
                         <img src="{{ options.section_valuation.image }}">
                     </div>
