--- a/components/static-sections/page-top.twig
+++ b/components/static-sections/page-top.twig
@@ -5,7 +5,7 @@
 <section class="section-page-top {{ section_css_class }}">
     <div class="container-wide">
         <div class="row">
-            <div class="col-xl-6">
+            <div class="col-xl-6" data-aos="fade-down">
                 <div class="section-page-top--left-wrap">
                     <h1>{{ title }}</h1>
 
@@ -19,7 +19,7 @@
                 </div>
                 {% block left_block_below %}{% endblock %}
             </div>
-            <div class="col-xl-6">
+            <div class="col-xl-6" data-aos="fade-up">
                 <div class="section-page-top--image-wrap">
                     {% if image %}
                         {% if thumbnail_size %}
