--- a/src/sass/essential/sections/_portal-login.scss
+++ b/src/sass/essential/sections/_portal-login.scss
@@ -26,6 +26,11 @@
                     i{
                         color: $brand-main-red;
                     }
+
+                    &:hover{
+                        text-decoration: none;
+                        color: $brand-main-red;
+                    }
                 }
             }
         }
