--- a/src/sass/essential/global/_branch-post.scss
+++ b/src/sass/essential/global/_branch-post.scss
@@ -42,6 +42,7 @@
         .branch-contacts-list{
             list-style: none;
             padding: 0;
+            min-height: 99px;
 
             li{
                 &:not(:first-child) {
