--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -112,6 +112,7 @@
                 cursor: pointer;
                 appearance : none;
                 background: transparent;
+                max-width: 95px;
             }
 
             .autocomplete-container input,
