--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -71,6 +71,7 @@
 @import "shortcode/branch-area-box";
 @import "shortcode/branches-list";
 @import "shortcode/new-homes-list";
+@import "shortcode/propertyhive-featured-properties";
 
 
 /*
