fix view for the phone number for new home detail page

--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -93,7 +93,9 @@
                             <h3 class="text-uppercase">Get in Contact</h3>
                             <div class="branch-info">
                                 {% if contacts.phone_number %}
-                                    <a href="tel:{{ contacts.phone_number | replace({' ':''}) }}" class="branch-info--phone-number h3 text-uppercase">{{ contacts.phone_number }}</a>
+                                    <div>
+                                        <a href="tel:{{ contacts.phone_number | replace({' ':''}) }}" class="branch-info--phone-number h3 text-uppercase">{{ contacts.phone_number }}</a>
+                                    </div>
                                 {% endif %}
                                 <a href="javascript:;" onclick="SA_Common.openFancyModal('#new-home-form-popup')" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
                             </div>
