--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -97,7 +97,7 @@
                                         <a href="tel:{{ contacts.phone_number | replace({' ':''}) }}" class="branch-info--phone-number h3 text-uppercase">{{ contacts.phone_number }}</a>
                                     </div>
                                 {% endif %}
-                                <a href="javascript:;" onclick="SA_Common.openFancyModal('#new-home-form-popup')" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
+                                <a href="javascript:;" data-fancybox data-src="#new-home-form-popup" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             </div>
 
                             <div class="section-features-image--content-wrap__actions">
-                                <a href="javascript:;" onclick="SA_Common.openFancyModal('#new-home-form-popup')" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
+                                <a href="javascript:;" data-fancybox data-src="#new-home-form-popup" class="btn btn-lg btn-secondary text-uppercase">Email Us</a>
                             </div>
                         </div>
                     </div>
