--- a/templates/base.twig
+++ b/templates/base.twig
@@ -66,7 +66,7 @@
 			}
 		</script>
 
-        {% include "components/popups/valuation.twig" %}
+        {#{% include "components/popups/valuation.twig" %}#}
         {% include "components/popups/new-home-contact.twig" %}
 	</body>
 </html>
