header offset for logged in user

--- a/src/sass/essential/parts/_header.scss
+++ b/src/sass/essential/parts/_header.scss
@@ -120,6 +120,8 @@
 body{
     &.logged-in{
         #header{
+            top:32px;
+
             .header-top-nav{
                 ul{
                     li{
