--- a/src/sass/essential/global/_new-home-post.scss
+++ b/src/sass/essential/global/_new-home-post.scss
@@ -43,6 +43,7 @@
         h4{
             font-size: 16px;
             font-weight: normal;
+            min-height: 38px;
         }
 
         .new-home-price{
