--- a/components/sections/featured_properties.twig
+++ b/components/sections/featured_properties.twig
@@ -5,11 +5,13 @@
                 <div class="col-xl-6">
                     <h3 class="text-uppercase">{{ section.fp_title }}</h3>
                 </div>
-                <div class="col-xl-6 text-xl-right">
-                    {% include 'components/parts/link.twig' with {
-                        link: section.fp_search_link
-                    } %}
-                </div>
+                {% if section.fp_search_link %}
+                    <div class="col-xl-6 text-xl-right">
+                        {% include 'components/parts/link.twig' with {
+                            link: section.fp_search_link
+                        } %}
+                    </div>
+                {% endif %}
             </div>
         </div>
 
