--- a/components/popups/branch-contact.twig
+++ b/components/popups/branch-contact.twig
@@ -1,4 +1,5 @@
 <div id="branch-contact-popup" style="max-width:600px">
+    <h3 class="mb-3">Contact {{ branch_title }}</h3>
     <form data-form="branchContact">
         <input type="hidden" name="id" value="{{ id }}">
         <input type="hidden" name="department" value="{{ department }}">
