responsive for guides page + footer

--- a/components/static-sections/newsletter.twig
+++ b/components/static-sections/newsletter.twig
@@ -1,13 +1,13 @@
 <section class="section-newsletter">
     <div class="container">
         <div class="row">
-            <div class="col-xl-4">
+            <div class="col-lg-4 col-md-5 text-center text-md-left mb-5 mb-md-0">
                 <div class="section-newsletter--socials">
                     <h3>Stay Up-To-Date</h3>
                     {{ '[social_links]' | shortcodes }}
                 </div>
             </div>
-            <div class="col-xl-8">
+            <div class="col-lg-8 col-md-7">
                 <form class="newsletter-form" action="https://www.surveygizmo.com/s3/6575989/Email-Newsletter" method="post" enctype="multipart/form-data">
                     <div class="sg-hidden-inputs">
                         <input type="hidden" name="sg_navchoice" id="sg_navchoice" value=""/>
