--- a/src/sass/essential/common/_brakepoints.scss
+++ b/src/sass/essential/common/_brakepoints.scss
@@ -1,6 +1,7 @@
 @import "../breakpoints/1800";
 @import "../breakpoints/1600";
 @import "../breakpoints/1440";
+@import "../breakpoints/1350";
 @import "../breakpoints/1300";
 @import "../breakpoints/1200";
 @import "../breakpoints/991";
