--- a/components/sections/block_links.twig
+++ b/components/sections/block_links.twig
@@ -6,7 +6,7 @@
                 <div class="row">
 
                     {% for block in section.bl_blocks_list %}
-                        <div class="col-xl-4">
+                        <div class="col-lg-4 col-md-6">
                             <div class="item-block-link">
                                 <a {% if block.url.target %}target="_blank"{% endif%} href="{{ block.url.url }}"><img src="{{ block.image }}" alt="{{ block.url.title }}"></a>
                                 {% if block.url %}
