--- a/src/sass/essential/breakpoints/_1200.scss
+++ b/src/sass/essential/breakpoints/_1200.scss
@@ -1,3 +1,12 @@
 @media screen and (max-width: 1200px) {
+    .section-page-top{
+        &--left-wrap{
+            padding-left: 30px;
+            padding-right: 30px;
 
+            h1{
+                font-size: 30px;
+            }
+        }
+    }
 }
