--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -1,3 +1,9 @@
 @media screen and (max-width: 767px) {
-
+    .section-page-top{
+        &--image-wrap{
+            margin-top: 15px;
+            margin-left: -15px;
+            margin-right: -15px;
+        }
+    }
 }
