--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,17 +1,17 @@
 <div class="container">
     <div class="footer-widgets">
         <div class="row">
-            <div class="col-xl-3">
+            <div class="col-lg-3 col-md-5">
                 <div class="footer-widgets--widget">
                     {{ footer_widgets1 }}
                 </div>
             </div>
-            <div class="col-xl-5">
+            <div class="col-lg-5 col-md-7 mt-5 mt-md-0">
                 <div class="footer-widgets--widget menu-2columns">
                     {{ footer_widgets2 }}
                 </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-lg-4 mt-5 mt-lg-0">
                 <div class="footer-widgets--widget menu-2columns">
                     {{ footer_widgets3 }}
                 </div>
