--- a/src/sass/essential/breakpoints/_1200.scss
+++ b/src/sass/essential/breakpoints/_1200.scss
@@ -9,4 +9,24 @@
             }
         }
     }
+
+    .section-home-hero{
+        &--content{
+            padding-top: 0;
+            padding-bottom: 25px;
+            font-size: 19px;
+
+            h1{
+                font-size: 26px;
+            }
+        }
+
+        &--valuation{
+            margin-top: 15px;
+
+            h3{
+                margin-bottom: 5px;
+            }
+        }
+    }
 }
