--- a/src/sass/essential/breakpoints/_1300.scss
+++ b/src/sass/essential/breakpoints/_1300.scss
@@ -1,3 +1,16 @@
 @media screen and (max-width: 1300px) {
+    .section-home-hero{
+        &--content{
+            padding-left: 40px;
+            padding-right: 40px;
 
+            h1{
+                font-size: 33px;
+            }
+        }
+
+        &--search{
+            left: 55px;
+        }
+    }
 }
