--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -1,3 +1,27 @@
 @media screen and (max-width: 991px) {
+    .section-home-hero{
+        &--image {
+            img {
+                height: 215px;
+                object-fit: cover;
+                width: 100%;
+            }
+        }
 
+        &--content{
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        &--search{
+            position: relative;
+            left: auto;
+            right: auto;
+            margin-top: -50px;
+
+            &__shortcode{
+                max-width: 100%;
+            }
+        }
+    }
 }
