responsive content image section

--- a/components/sections/content_image.twig
+++ b/components/sections/content_image.twig
@@ -1,7 +1,7 @@
 <section class="page-section page-section--padding50 section-content-image {{ section.ci_logo_watermark ? 'has-logo-watermark' : '' }}">
     <div class="container">
-        <div class="row no-gutters">
-            <div class="col-xl-8" data-aos="fade-down">
+        <div class="row no-gutters text-center text-lg-left">
+            <div class="col-lg-8" data-aos="fade-down">
                 <div class="bg-primary section-content-image--content">
                     {% if section.ci_title %}
                         <h2 class="h1">{{ section.ci_title }}</h2>
@@ -13,9 +13,12 @@
                             css_class: 'link-border link-border--red'
                         } %}
                     {% endif %}
+                    <div class="section-content-image--mobile-image d-block d-lg-none">
+                        <img src="{{ section.ci_image }}">
+                    </div>
                 </div>
             </div>
-            <div class="col-xl-4" data-aos="fade-up">
+            <div class="col-lg-4 d-none d-lg-block" data-aos="fade-up">
                 <div class="section-content-image--image-wrap">
                     <img src="{{ section.ci_image }}">
                 </div>
