--- a/src/sass/essential/breakpoints/_1350.scss
+++ b/src/sass/essential/breakpoints/_1350.scss
@@ -7,4 +7,11 @@
             }
         }
     }
+
+    .section-content-image{
+        &--content{
+            left: 0;
+            margin-right: 0;
+        }
+    }
 }
