--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -1,3 +1,20 @@
 @media screen and (max-width: 575px) {
+    .section-content-image{
+        &--content{
+            padding: 30px 15px;
+            font-size: 14px;
 
+            & > h2{
+                font-size: 22px;
+            }
+
+            .link-border{
+                margin-top: 30px;
+            }
+        }
+
+        &--mobile-image{
+            margin-right: -30px;
+        }
+    }
 }
