hide arrows from property seach form + featured properties responsive settings

--- a/components/static-sections/properties.twig
+++ b/components/static-sections/properties.twig
@@ -1,7 +1,7 @@
 <section class="page-section page-section--padding50 section-shortcode-properties {{ css_class }}">
     <div class="container" data-aos="fade-left">
         {% if title %}
-            <div class="page-section--heading">
+            <div class="page-section--heading text-center text-md-left">
                 <h3>{{ title }}</h3>
             </div>
         {% endif %}
