--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -98,4 +98,12 @@
             margin-top: 30px;
         }
     }
+
+    .section-cta-carousel {
+        .cta-slide {
+            &--content {
+                padding: 30px;
+            }
+        }
+    }
 }
