--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -45,4 +45,33 @@
             }
         }
     }
+
+    .section-cta-carousel{
+        .cta-slide{
+            &--image{
+                margin-top: 15px;
+            }
+
+            &--content{
+                margin-left: 15px;
+                margin-right: 15px;
+                padding: 60px;
+                text-align: center;
+            }
+        }
+
+        .sa-cta-carousel{
+            margin-left: -15px;
+            margin-right: -15px;
+            width: auto;
+            margin-bottom: 0;
+
+            .owl-dots{
+                position: relative;
+                right: auto;
+                width: 100%;
+                margin-top: 20px;
+            }
+        }
+    }
 }
